--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.4.1
 backports.zoneinfo==0.2.1
 Django==4.0
+django-crispy-forms==1.12.0
+mysqlclient==2.1.0
 python-decouple==3.4
 sqlparse==0.4.2
-django-crispy-forms==1.12.0
